Enhance Guardrail extension by adding tab permissions and implementing DOM-based win/loss detection for BetBoom. Introduce popup for betting sites and manage session state for greeted tabs.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Guardrail",
   "version": "1.0.0",
   "description": "Protect your edge. Enforce your rules. Consistência no longo prazo começa com regras que você não pode quebrar.",
-  "permissions": ["storage", "alarms"],
+  "permissions": ["storage", "alarms", "tabs"],
   "background": {
     "service_worker": "background.js"
   },
